Include tests/tpch in automake list
Signed-off-by: Florent Poinsard <florent.poinsard@outlook.fr>

--- a/configure.ac
+++ b/configure.ac
@@ -404,6 +404,7 @@ src/tests/fileio/Makefile
 src/tests/memory/Makefile
 src/tests/threads/Makefile
 src/tests/mutex/Makefile
+src/tests/tpch/Makefile
 src/lua/Makefile
 src/lua/internal/Makefile
 tests/Makefile
