iibench: initial import
Signed-off-by: Vicent Marti <vmg@strn.cat>

--- a/src/lua/Makefile.am
+++ b/src/lua/Makefile.am
@@ -27,6 +27,10 @@ dist_pkgdata_SCRIPTS = bulk_insert.lua \
              oltp_update_non_index.lua \
              oltp_write_only.lua\
              select_random_points.lua \
-             select_random_ranges.lua
+             select_random_ranges.lua \
+             iibench.lua \
+             iibench_common.lua \
+             index_stat.lua \
+             thread_groups.lua
 
 dist_pkgdata_DATA = oltp_common.lua
